BUGFIX: nav--stacked li a padding and line-height added to maintain general spacing but increase recognition of multiline links

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Molecules/_Navigation.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Molecules/_Navigation.scss
@@ -44,6 +44,10 @@
 .nav--stacked {
 	> li {
 		display: list-item;
+    a {
+      line-height: 1.25;
+      padding-block: 0.3rem;
+    }
 	}
 }
 
